# SynxFlow

./: .readthedocs.yml  CMakeLists.txt  COMMUNITY_GUIDELINES.md  Dockerfile  MANIFEST.in  README.md  README_Docker.md  authors.md  setup.py
DynaMMIS/IO/: Boundary.py  InputHipims.py  Landcover.py  OutputHipims.py  Rainfall.py  Summary.py  __init__.py  demo_functions.py  grid_show.py  indep_functions.py
DynaMMIS/apps/cudaFloodSolversPybind/: CMakeLists.txt
docs/: requirements.txt
docs/source/: about.md  conf.py  index.rst  quickstart.md
docs/source/Modules/: Boundary.rst  InputHipims.rst  InputModel.rst  Landcover.rst  OutputHipims.rst  OutputModel.rst  Rainfall.rst  Raster.rst  Summary.rst  demo_functions.rst  engines.rst  grid_show.rst  indep_functions.rst  index.rst  rainfall_processing.rst  spatial_analysis.rst
docs/source/Tutorials/: LLM.md  LLM.rst  data_list.md  debris.ipynb  flood.ipynb  index.rst  landslide.ipynb
docs/source/Tutorials/.ipynb_checkpoints/: flood-checkpoint.ipynb
docs/source/_templates/: layout.html
joss/: paper.bib  paper.md
pypims/: CMakeLists.txt  __init__.py  version.py
pypims/IO/: Boundary.py  InputHipims.py  Landcover.py  OutputHipims.py  Rainfall.py  Raster.py  Summary.py  __init__.py  demo_functions.py  grid_show.py  indep_functions.py  rainfall_processing.py  spatial_analysis.py
pypims/IO/sample/: rain_source.csv
pypims/apps/cudaFloodSolversPybind/: cuda_flood_solvers.cu  cuda_flood_solvers.h  flood_solvers_pybind.cc
pypims/hipims_io/: README.md  setup.py
pypims/hipims_io/hipims_io/: Boundary.py  Landcover.py  OutputHipims.py  Rainfall.py  Summary.py  rainfall_processing.py  spatial_analysis.py
pypims/lib/src/operators/: cuda_infiltration.cu
synxflow/: CMakeLists.txt  __init__.py  version.py
synxflow/IO/: Boundary.py  InputModel.py  OutputModel.py  Rainfall.py  Summary.py  __init__.py  demo_functions.py  grid_show.py  indep_functions.py  spatial_analysis.py
synxflow/IO/sample/debris/: DEM.txt  Erosion.txt
synxflow/IO/sample/flood/: rain_source.csv
synxflow/apps/cudaDebrisFlowSolverPybind/: CMakeLists.txt  cuda_debris_flow_solver.cu  cuda_debris_flow_solver.h  debris_solver_pybind.cc
synxflow/apps/cudaFloodSolversPybind/: CMakeLists.txt  cuda_flood_solvers.cu  flood_solvers_pybind.cc
synxflow/apps/cudaLandslideSolverPybind/: CMakeLists.txt  cuda_landslide_solver.cu  cuda_landslide_solver.h  landslide_solver_pybind.cc
synxflow/lib/: CMakeLists.txt
synxflow/lib/include/operators/: cuda_erosion_deposition.h  cuda_friction.h  cuda_infiltration.h
tests/unit_tests/: test_boundary.py  test_input.py  test_landuse.py  test_output.py  test_rainfall.py  test_raster.py
tutorials/: flood.ipynb
tutorials/.ipynb_checkpoints/: flood-checkpoint.ipynb
(+14 files in other folders)
